# agentic-ai-crew

./: .gitignore  README.md  pyproject.toml
src/trip_planner_adv/: crew.py  main.py
src/trip_planner_adv/config/: agents.yaml  tasks.yaml
src/trip_planner_adv/tools/: amadeus.py
