[project]
name = "trip_planner_adv"
version = "0.1.0"
description = "trip_planner_adv using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "amadeus>=12.0.0",
    "crewai[tools]>=0.108.0,<1.0.0",
    "langchain-community>=0.3.20",
]

[project.scripts]
trip_planner_adv = "trip_planner_adv.main:run"
run_crew = "trip_planner_adv.main:run"
train = "trip_planner_adv.main:train"
replay = "trip_planner_adv.main:replay"
test = "trip_planner_adv.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
